--- a/Homework 4.ipynb
+++ b/Homework 4.ipynb
@@ -268,8 +268,8 @@
    "outputs": [],
    "source": [
     "# Create two arrays to store the response and independent variables for regression equation.\n",
-    "indp = iris_petal.as_matrix(columns=['PetalLength'])\n",
-    "response = iris_petal.as_matrix(columns=['PetalWidth'])"
+    "indp_iris = iris_petal.as_matrix(columns=['PetalLength'])\n",
+    "response_iris = iris_petal.as_matrix(columns=['PetalWidth'])"
    ]
   },
   {
@@ -310,7 +310,7 @@
     "    return x_line, np.array(intercept[0] + intercept[1] * x_line)\n",
     "\n",
     "#get the matrix for the iris_petal DF\n",
-    "x_mat, y_mat = regline(indp, response)"
+    "x_mat, y_mat = regline(indp_iris, response_iris)"
    ]
   },
   {
@@ -343,14 +343,14 @@
    ],
    "source": [
     "# create a scatterplot of the iris_petal DF\n",
-    "plt.scatter(indp, response)\n",
+    "plt.scatter(indp_iris, response_iris)\n",
     "\n",
     "# label axes\n",
-    "plt.xlabel('Petal Length')\n",
-    "plt.ylabel('Petal Width')\n",
+    "plt.xlabel(\"Petal Length\")\n",
+    "plt.ylabel(\"Petal Width\")\n",
     "\n",
     "# plot the regression equation \n",
-    "plt.plot(x_mat, y_mat.T, color='r', label='line of best fit')\n",
+    "plt.plot(x_mat, y_mat.T, color=\"r\")\n",
     "\n",
     "# show plot\n",
     "plt.show()\n"
